--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif+Caption&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <title>Fake Restaurant</title>
@@ -30,55 +31,33 @@
             </div> 
             <div class="navbar-end">
                 <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link" href="#menu">
-                        Menu
-                    </a>
+                    <a class="navbar-link" href="#menu">Menu</a>
                     <div class="navbar-dropdown is-boxed is-right">
-                        <a class="navbar-item" href="#breakfast">
-                        Breakfast
-                        </a>
+                        <a class="navbar-item" href="#breakfast">Breakfast</a>
                         <hr class="navbar-divider">
-                        <a class="navbar-item" href="#brunch">
-                        Brunch (weekends only)
-                        </a>
+                        <a class="navbar-item" href="#brunch">Brunch (weekends only)</a>
                         <hr class="navbar-divider">
-                        <a class="navbar-item" href="#lunch">
-                        Lunch
-                        </a>
-                        <a class="navbar-item" href="#dinner">
-                        Dinner
-                        </a>
-                        <a class="navbar-item" href="#desserts">
-                        Desserts
-                        </a>
-                        <a class="navbar-item" href="#drinks">
-                        Drinks
-                        </a>
+                        <a class="navbar-item" href="#lunch">Lunch</a>
+                        <a class="navbar-item" href="#dinner">Dinner</a>
+                        <a class="navbar-item" href="#desserts">Desserts</a>
+                        <a class="navbar-item" href="#drinks">Drinks</a>
                     </div>
                 </div>
-                <a class="navbar-item" href="#contact">
-                    Contact us
-                </a>
+                <a class="navbar-item" href="#contact">Contact us</a>
             </div>
         </nav>
-        <div class="hero-body">
+        <div class="hero-body home-shadow">
           <div class="container">
-            <h1 class="title">
-              Welcome to The Fake Restaurant
-            </h1>
-            <h2 class="subtitle">
-              Organic food and great experience
-            </h2>
+            <h1 id="main-title" class="title">Welcome to The Fake Restaurant</h1>
+            <h2 id="main-subtitle" class="subtitle">Organic food and great experience</h2>
           </div>
         </div>
       </section>
 
       <section id="menu" class="hero is-medium is-primary is-bold">
-        <div class="hero-body">
+        <div class="hero-body home-shadow">
             <div class="container">
-                <p class="title is-1 is-spaced">
-                Our menu
-                </p>
+                <p class="title is-1 is-spaced">Our menu</p>
                 <div class="tile is-ancestor">
                     <div class="tile is-parent">
                         <article id="breakfast" class="tile is-child box">
@@ -142,28 +121,27 @@
       </section>
 
       <section id="contact" class="hero is-medium is-primary is-bold">
-        <div class="hero-body">
+        <div class="hero-body home-shadow">
             <div class="container">
                 <p class="title is-1 is-spaced">
                     Contact us
                 </p>
-                <p class="title is-3 is-spaced has-text-centered">
+                <p id="contact-data" class="title is-3 is-spaced has-text-centered">
                         First Street 1, 00-001 Warsaw</br>
-                        22 555 5555</br>
-                        restaurant@fake.com
+                        22 555 5555, 987 654 321</br>
+                        <a href="mailto:contact@fake.com">restaurant@fake.com</a>
                 </p>
+                <p class="title is-1 is-spaced">Find us on</p>
+                <div class="social title is-3 is-spaced has-text-centered">
+                    <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tripadvisor.com" target="_blank"><i class="fab fa-tripadvisor"></i></a>
+                </div>
             </div>
-        </div>
+        </div><br>
         <footer class="footer is-transparent">
             <div class="content">
-                <p>
-                    The Fake Restaurant, 2019
-                    <span class="social">
-                        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.tripadvisor.com" target="_blank"><i class="fab fa-tripadvisor"></i></a>
-                    </span>
-                </p>
+                <p>The Fake Restaurant, &copy MartaGrus 2020</p>
             </div>
         </footer>
       </section>
