--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                         </article>
                     </div>
                 </div>
+                </div>
             </div>
         </div>
       </section>
@@ -122,8 +123,8 @@
                 </p>
                 <p class="title is-1 is-spaced">Find us on</p>
                 <div class="social title is-3 is-spaced has-text-centered">
-                    <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                    <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/thefakerestaurant" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.instagram.com/thefakerestaurant/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.tripadvisor.com" target="_blank"><i class="fab fa-tripadvisor"></i></a>
                 </div>
             </div>
